feat-em todas as rotas do sistema /add swegger na aplicaçao
